# floater-trainer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-publish.yaml
app/: about.py  cheat_sheet.py  constants.py  navigation.py  shape_image.py  tile_image.py  trainer.py
