[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.0"
streamlit-extras = "^0.5.0"
streamlit-shortcuts = "^0.1.9"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
cairosvg = "^2.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
vulture = "^2.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
